panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__preprocessor__test_function_like_macro_with_itself_in_argument_list.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/preprocessor/test_function_like_macro_with_itself_in_argument_list.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/test_function_like_macro_with_itself_in_argument_list.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition x~2 `long long` (sign-extend `long long` (42 `int`)))
         (return (add `int` (27 `int`) (1 `int`))))))

----- stderr -----
