panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__preprocessor__test_function_like_macro_with_nesten_parens_in_argument_list.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/preprocessor/test_function_like_macro_with_nesten_parens_in_argument_list.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/test_function_like_macro_with_nesten_parens_in_argument_list.c"
   (function-definition external
      f~0 `fn(x: int, y: int) -> int`
      (params
         x~2 `int`
         y~3 `int`)
      (compound-statement
         (return (add `int` (multiply `int` (2 `int`) (x~2 `int`)) (y~3 `int`)))))
   (function-definition external
      main~4 `fn() -> int`
      (compound-statement
         (return
            (add `int`
               (subtract `int`
                  (call `int`
                     (addressof `ptr<fn(x: int, y: int) -> int>`
                        (f~0 `fn(x: int, y: int) -> int`))
                     (5 `int`)
                     (20 `int`))
                  (add `int` (1 `int`)
                     (combine `int`
                        (100 `int`)
                        (2 `int`))))
               (42 `int`))))))

----- stderr -----
