panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__preprocessor__test_macro_expansion_is_not_recursive.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/preprocessor/test_macro_expansion_is_not_recursive.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/test_macro_expansion_is_not_recursive.c"
   (declaration external printf~0 `fn(∅: ptr<char const>, ...) -> int` ∅)
   (function-definition external
      main~1 `fn() -> int`
      (compound-statement
         (definition a~3 `int` (10 `int`))
         (definition b~4 `int` (20 `int`))
         (definition c~5 `int` (30 `int`))
         (return (add `int` (add `int` (add `int` (a~3 `int`) (5 `int`)) (3 `int`)) (1 `int`))))))

----- stderr -----
