panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__preprocessor__test_object_like_macro.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/preprocessor/test_object_like_macro.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/preprocessor/test_object_like_macro.c"
   (declaration external putchar~0 `fn(c: int) -> int` ∅)
   (function-definition external
      main~1 `fn() -> int`
      (compound-statement
         (definition x~3 `int` (42 `int`))
         (expression
            (call `int`
               (addressof `ptr<fn(c: int) -> int>`
                  (putchar~0 `fn(c: int) -> int`))
               ('a' `int`)))
         (expression
            (call `int`
               (addressof `ptr<fn(c: int) -> int>`
                  (putchar~0 `fn(c: int) -> int`))
               ('\n' `int`)))
         (return (x~3 `int`)))))

----- stderr -----
